Почистил код. Исправил много чего. И тесты упали