@@ -6,7 +6,6 @@ import pl.maks.carrental.repository.model.Parking;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class ParkingConverter {
@@ -23,7 +22,7 @@ public class ParkingConverter {
     public List<ParkingDTO> convertToDto(Collection<Parking> source) {
         return source.stream()
                 .map(this::convertParkingToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public ParkingDTO convertParkingToDto(Parking source) {
